--- a/game-store-api/src/main/resources/application.yml
+++ b/game-store-api/src/main/resources/application.yml
@@ -1,4 +1,17 @@
+
 spring:
   datasource:
-    url: url
-    username: akdkd
+    url: jdbc:postgresql://localhost:5433/game_store_app_db
+    username: cidi
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+server:
+  port: 8081
